--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<div>
-  <h1> Witam w pierwszym projekcie</h1>
-</div>
+<html>
+<head>
+  <!-- @todo dodaj link go google fonts  -->
+</head>
+<body>
+  <div>
+    <h1> Witam w pierwszym projekcie</h1>
+  </div>
 
-<div class="footer"> Copyright Info 2017 </div>
+  <div class="footer"> Copyright Info 2017 </div>
+  <!-- @todo dodaj kod google analytics -->
+</body>
+</html>
