zmodyfikowanie pliku index i dodanie wersji

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 </head>
 <body>
   <div>
-    <h1> Witaj przybyszu w pierwszej wersji projektu</h1>
+
+    <h1> Witaj przybyszu w kolejnej wersji projektu</h1>
+
   </div>
 
   <div class="footer"> Copyright Info 2017 </div>
+  <!-- @todo dodatkowa informacja  -->
   <!-- @todo dodaj kod google analytics -->
 </body>
 </html>
